--- a/app/src/main/res/layout/activity_round.xml
+++ b/app/src/main/res/layout/activity_round.xml
@@ -61,8 +61,13 @@
         android:text="Passer"
         android:textStyle="bold" />
 
-    <Space
+    <TextView
+        android:id="@+id/nbPass_xml"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.4" />
+        android:layout_weight="0.5"
+        android:gravity="center|top"
+        android:text="Restant :"
+        android:textColor="@android:color/black" />
+
 </LinearLayout>
