--- a/app/src/main/res/layout/activity_jeu.xml
+++ b/app/src/main/res/layout/activity_jeu.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/background1">
 
     <TextView
         android:id="@+id/numero_equipe_xml"
@@ -13,16 +14,18 @@
         android:gravity="center"
         android:text="Equipe 1"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textSize="18sp" />
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/bouton_demarrer_xml"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="0.4"
         android:text="APPUYEZ POUR COMMENCER !"
-        style="?android:attr/borderlessButtonStyle" />
+        android:textColor="@android:color/black"
+        android:textStyle="bold|italic" />
 
     <Space
         android:layout_width="match_parent"
