--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,51 +2,48 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@drawable/background1">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="4"
-        android:orientation="vertical">
-        <Button
-            android:id="@+id/xml_son"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="son"/>
-        <Button
-            android:id="@+id/xml_vibration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="vibration"
-            android:layout_gravity="right"/>
-    </LinearLayout>
+        android:orientation="vertical"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:orientation="vertical">
-    <Button
-        android:id="@+id/xml_jouer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Jouer"
-        android:layout_gravity="center"/>
 
-    <Button
-        android:id="@+id/xml_ajoutMot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ajouter des mots"
-        android:layout_gravity="center"/>
+        <Button
+            android:id="@+id/xml_jouer"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:background="@android:color/holo_orange_dark"
+            android:text="Jouer"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/xml_regles"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Regle du jeu"
-        android:layout_gravity="center"/>
+        <Button
+            android:id="@+id/xml_ajoutMot"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:background="@android:color/holo_orange_light"
+            android:text="Ajouter des mots"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/xml_regles"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@android:color/holo_orange_light"
+            android:text="Regle du jeu"
+            android:textStyle="bold" />
 </LinearLayout>
 </LinearLayout>
